--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="favicon.ico">
+  <meta name="description" content="This website is for my resume">
+  <meta name="author" content="862306400">
 
-  <title>John Doe - Business Administration</title>
+  <title>Colin Kim - Student</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Colin Kim</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/colinkim.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,40 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Colin Kim
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Hello, my name is Colin Kim, currently a dedicated and passionate Psychology student. I firmly believe that understanding the human mind's intricate workings and dynamics is vital to building a better and more empathetic society. Though my title is Student, I like to think of myself more as a 'learner' - a voracious reader and an eager explorer of the human psyche.
+
+Throughout my academic journey, I have been committed to gaining comprehensive knowledge in various psychology disciplines. I've taken rigorous coursework in cognitive psychology, behavioral psychology, and social psychology, to name a few. This comprehensive training has equipped me with a diverse skill set and an all-encompassing understanding of human behavior. My analytical abilities and strong communication skills have been honed through numerous group projects, presentations, and research papers.
+
+Apart from my formal education, I've also sought out additional learning opportunities to further broaden my understanding and experience in psychology. As an active member of the Psychology Club at my university, I have participated in various events, including guest lectures, symposiums, and community outreach programs. These experiences have helped me develop leadership qualities, teamwork skills, and a strong understanding of the practical applications of psychology.
+
+As a firm believer in giving back to the community, I've volunteered my time with local mental health organizations. These experiences have provided me with real-world exposure to the challenges individuals face in their day-to-day lives, further solidifying my commitment to contribute to mental health advocacy and support.
+
+Being a 'learner' also extends beyond my academic life. In my personal time, I find joy in exploring various cultures through their culinary delights, reading literary classics, and staying active with regular hiking and cycling. I believe these hobbies contribute to my well-rounded personality and help me maintain a healthy work-life balance.
+
+As I continue my academic journey, I aspire to gain more practical experience in clinical psychology and research. I'm constantly seeking opportunities to apply my theoretical knowledge and skills to contribute to the broader field of psychology. My ultimate aim is to build a career that blends my passion for understanding human behavior with my commitment to fostering empathy and support within our society.
+
+Despite being at the beginning of my professional journey, I am proud of the progress I've made so far and excited about the prospects the future holds. My relentless curiosity and dedication to psychology will undoubtedly drive me to continue growing both personally and professionally.
+
+I invite you to join me as I navigate this fascinating journey of understanding the human mind. Welcome to my world.<br><br>
 
         Enter bio here<br><br>
 
         Enter bio here
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/gihyuk-kim-0987021b5/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/gkim143">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/ColinKim7">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="gkim143@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +106,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Server</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.aikanpayce.com/">Aburi Sushi</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Recorded orders precisely and efficiently, accommodating special requests and communicating them clearly with kitchen staff<br> 
+              • Responded to customer inquiries with extensive knowledge of menu items, ingredients, and preparation methods, providing professional and courteous service.<br>
+              • Thrived under pressure during peak hours to provide prompt and exceptional service to all customers<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">December 2019 - March 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Waiter</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://arisukoreanbbq.business.site/">Aria Korean BBQ</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Accurately and promptly took food and beverage orders, meticulously noting any special requests and communicating them to the kitchen.<br>
+              • Demonstrated cooking techniques to guests and provided support with grilling as required<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2018 - December 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">PetSmart Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.petsmart.com/">PetSmart</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Provided customer support<br>
+            • Maintained a clean, safe, and healthy environment for the animals in store<br>
+            • Ensured that the store was clean, organized, and safe for both pets and customers<br>
+            • Conducted product demonstrations and training for customers to educate them about pet care<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">December 2016 - December 2017</span>
           </div>
         </div>
 
@@ -152,37 +166,23 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors Degree for Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2021</span> - Current</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Cypress College</h3>
+            <div class="subheading mb-3">Associate's Degree in Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">September 2017 - May 2021</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/kbbq.jpg" width="500px">
+            <img src="img/petsmart.jpeg" width="500px"><br>
+            <img src="img/sushi.jpeg" width="500px">
+            <img src="img/foodcard.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +202,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Colin Kim</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
